--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_mainFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_saveMusicFragment"
+            app:destination="@id/saveMusicFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -44,4 +47,9 @@
         android:label="Chat Fragment"
         tools:layout="@layout/chat_fragment">
     </fragment>
+    <fragment
+        android:id="@+id/saveMusicFragment"
+        android:name="com.example.playground.ui.manage.SaveMusicFragment"
+        android:label="Salvar Música"
+        tools:layout="@layout/save_music_fragment" />
 </navigation>
