--- a/app/src/main/res/layout/item_musica.xml
+++ b/app/src/main/res/layout/item_musica.xml
@@ -10,7 +10,7 @@
     app:cardElevation="5dp">
     <!--    tools:showIn="@layout/main_fragment">-->
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
@@ -19,25 +19,42 @@
 
         <TextView
             android:id="@+id/tv_number"
-            android:layout_width="30dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_oval"
-            android:elevation="3dp"
-            android:layout_margin="4dp"
-            android:padding="4dp"
-            android:text="1"
+            android:elevation="4dp"
+            android:padding="6dp"
+            tools:text="1"
+            android:gravity="center"
             android:textAlignment="center"
+            android:autoSizeMinTextSize="6dp"
+            android:autoSizeMaxTextSize="14dp"
+            android:autoSizeTextType="uniform"
+            android:textSize="14dp"
+            android:lines="1"
             android:textColor="#FFFFFF"
-            android:textSize="14dp" />
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Highway to Hell"
-            android:textColor="#000"
+            android:layout_marginTop="4dp"
+            android:autoSizeMaxTextSize="14dp"
+            android:autoSizeMinTextSize="6dp"
+            android:autoSizeTextType="uniform"
+            android:gravity="center"
+            android:maxLines="2"
             android:textAlignment="center"
-            android:textSize="14dp" />
-    </LinearLayout>
+            android:textColor="#000"
+            android:textSize="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_number"
+            tools:text="Highway to Hell" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
