--- a/app/src/main/res/layout/save_music_fragment.xml
+++ b/app/src/main/res/layout/save_music_fragment.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome da música"
-            android:inputType="textCapWords" />
+            android:inputType="textMultiLine|textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome do artista"
-            android:inputType="textCapWords" />
+            android:inputType="textMultiLine|textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
