Snackbar com desfazer e delete music

--- a/app/src/main/res/layout/save_music_fragment.xml
+++ b/app/src/main/res/layout/save_music_fragment.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".ui.manage.SaveMusicFragment">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome da música"
-            android:inputType="textMultiLine|textCapWords" />
+            android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome do artista"
-            android:inputType="textMultiLine|textCapWords" />
+            android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
