--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,17 +12,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/buttonMostrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:layout_gravity="center"
-            android:text="Mostrar / Ocultar"
-            android:textColor="#fff"
-            android:backgroundTint="#535353" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="Button1"
+                android:text="Carregar"
                 android:textColor="#fff"
                 android:backgroundTint="#2196F3" />
 
@@ -47,7 +39,7 @@
                 android:layout_marginEnd="8dp"
                 android:textColor="#fff"
                 android:backgroundTint="#F44336"
-                android:text="Button2"/>
+                android:text="Mudar Layout"/>
 
             <Button
                 android:id="@+id/button3"
@@ -55,66 +47,34 @@
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
                 android:backgroundTint="#4CAF50"
-                android:text="Button3"/>
+                android:text="Cadastrar"/>
 
         </LinearLayout>
 
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:visibility="invisible"
-            android:layout_gravity="center" />
-
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/text1"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list_musicas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="3"
+                tools:listitem="@layout/item_musica"
+                tools:itemCount="7"/>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textColor="#000"
-                android:text="Texto1"
-                android:textAlignment="center"/>
+                android:layout_marginTop="8dp"
+                android:visibility="invisible"
+                android:layout_gravity="center" />
 
-            <TextView
-                android:id="@+id/text2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="20dp"
-                android:textColor="#000"
-                android:text="Texto 2" />
+        </FrameLayout>
 
-
-            <TextView
-                android:id="@+id/text3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="20dp"
-                android:textColor="#000"
-                android:text="Texto 3" />
-
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_musicas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="3"
-            tools:listitem="@layout/item_musica"
-            tools:itemCount="7"/>
 
         <Button
             android:id="@+id/buttonHome"
@@ -135,16 +95,6 @@
             android:text="Notification"
             android:textColor="#fff"
             android:backgroundTint="#3F51B5" />
-
-        <Button
-            android:id="@+id/buttonCadastro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"
-            android:text="Cadastro"
-            android:textColor="#fff"
-            android:backgroundTint="#4CAF50" />
 
     </LinearLayout>
 
