--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#82BE42</color>
     <color name="colorPrimaryDark">#5B872D</color>
     <color name="colorAccent">#4EA3FF</color>
+    
+    <color name="refresh_progress_1">#1976D2</color>
+    <color name="refresh_progress_2">#FFC107</color>
+    <color name="refresh_progress_3">#F44336</color>
 </resources>
