--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -95,6 +95,6 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="24dp"
         android:backgroundTint="#4CAF50"
-        android:src="@drawable/ic_baseline_add_24"/>
+        android:src="@drawable/ic_add"/>
 
 </FrameLayout>
