--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -39,56 +39,84 @@
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-            <Button
-                android:id="@+id/btMudarLayout"
-                android:layout_width="wrap_content"
+            <GridLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="#00BCD4"
-                android:text="Mudar Layout"
-                android:textColor="#fff"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:columnCount="3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/slParent" />
+                app:layout_constraintTop_toBottomOf="@+id/slParent">
 
-            <Button
-                android:id="@+id/buttonHome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="#1976D2"
-                android:text="Home"
-                android:textColor="#fff"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btMudarLayout" />
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/btMudarLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#00BCD4"
+                    android:text="Mudar Layout"
+                    android:textColor="#fff"/>
 
-            <Button
-                android:id="@+id/buttonNotification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_gravity="center"
-                android:backgroundTint="#3F51B5"
-                android:text="Notification"
-                android:textColor="#fff"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonHome" />
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/buttonHome"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#1976D2"
+                    android:text="Home"
+                    android:textColor="#fff" />
 
-            <Button
-                android:id="@+id/btDeepLinkInter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_gravity="center"
-                android:backgroundTint="#F57C00"
-                android:text="DeepLink Inter"
-                android:textColor="#fff"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonHome" />
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/buttonNotification"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#3F51B5"
+                    android:text="Notification"
+                    android:textColor="#fff" />
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/btDeepLinkInter"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#F57C00"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/btDeepLinkInter2"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#F57C00"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/btDeepLinkInter3"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#F57C00"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+            </GridLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
