--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,10 @@
         <item name="android:background">@drawable/bg_bottom_sheet</item>
     </style>
 
+    <!--Button-->
+    <style name="DefaultButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">#fff</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
