--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -85,7 +85,7 @@
 
                 <Button
                     style="@style/DefaultButton"
-                    android:id="@+id/btDeepLinkInter"
+                    android:id="@+id/button"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
@@ -96,7 +96,7 @@
 
                 <Button
                     style="@style/DefaultButton"
-                    android:id="@+id/btDeepLinkInter2"
+                    android:id="@+id/button2"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
@@ -107,7 +107,7 @@
 
                 <Button
                     style="@style/DefaultButton"
-                    android:id="@+id/btDeepLinkInter3"
+                    android:id="@+id/button3"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
@@ -118,12 +118,45 @@
 
                 <Button
                     style="@style/DefaultButton"
-                    android:id="@+id/btDeepLinkInter4"
+                    android:id="@+id/button4"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:backgroundTint="#F57C00"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/button5"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#F57C00"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/button6"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="@color/blue_500"
+                    android:textColor="#fff"
+                    tools:text="Deeplink"/>
+
+                <Button
+                    style="@style/DefaultButton"
+                    android:id="@+id/button7"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="@color/blue_500"
                     android:textColor="#fff"
                     tools:text="Deeplink"/>
 
