--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -38,6 +38,17 @@
             android:textColor="#fff"
             android:backgroundTint="#2196F3" />
 
+        <TextView
+            android:id="@+id/tvSpannedText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="opa"/>
+
     </LinearLayout>
 
 </ScrollView>
