--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -49,6 +49,17 @@
             android:textSize="18sp"
             tools:text="opa"/>
 
+        <TextView
+            android:id="@+id/tvPlural"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="opas"/>
+
     </LinearLayout>
 
 </ScrollView>
