--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -74,6 +74,17 @@
 
                 <Button
                     style="@style/DefaultButton"
+                    android:id="@+id/buttonInstrument"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    android:backgroundTint="#1976D2"
+                    android:text="Instrumental"
+                    android:textColor="#fff" />
+
+                <Button
+                    style="@style/DefaultButton"
                     android:id="@+id/buttonNotification"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
