--- a/app/src/main/res/layout/instrument_fragment.xml
+++ b/app/src/main/res/layout/instrument_fragment.xml
@@ -19,45 +19,61 @@
             android:layout_gravity="center"
             android:layout_margin="64dp"/>
 
-        <TextView
-            android:id="@+id/tvName"
+        <LinearLayout
+            android:id="@+id/llInstrumentContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            tools:text="Nome" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/grey_700"
-            android:textSize="14sp"
-            tools:text="Tipo" />
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                tools:text="Nome" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center"
-            app:cardElevation="8dp">
+            <TextView
+                android:id="@+id/tvType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="@color/grey_700"
+                android:textSize="14sp"
+                tools:text="Tipo" />
 
-            <ImageView
-                android:id="@+id/ivPhoto"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:padding="4dp"
-                android:contentDescription="@string/instrument_photo_description"
-                tools:src="@drawable/guitarra_les_paul"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:layout_gravity="center"
+                app:cardElevation="8dp">
 
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/ivPhoto"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:padding="4dp"
+                    android:contentDescription="@string/instrument_photo_description"
+                    tools:src="@drawable/guitarra_les_paul"/>
 
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btnShow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Hide"
+                android:backgroundTint="@color/blue_500"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
