--- a/app/src/main/res/layout/glide_fragment.xml
+++ b/app/src/main/res/layout/glide_fragment.xml
@@ -16,7 +16,7 @@
             android:id="@+id/ivPhotoGlide"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:padding="8dp"
+            android:layout_margin="8dp"
             tools:src="@drawable/guitarra_les_paul"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
